# aether

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
skills/coding/python-debugging/: SKILL.md
src/aether/: __init__.py  api.py
src/aether/cli/: __init__.py  main.py  rich_cli.py  tui.py
src/aether/core/: __init__.py  audit.py  circuit_breaker.py  code_intel.py  config.py  cron.py  llm.py  loop.py  models.py  orchestrator.py  profile.py  sandbox.py  security.py  session_store.py
src/aether/memory/: __init__.py  manager.py  store.py
src/aether/platform/: __init__.py
src/aether/protocols/: __init__.py  a2a_client.py  mcp_client.py  mcp_server.py  tool_registry.py
src/aether/skills/: __init__.py  manager.py  parser.py
src/aether/tools/: __init__.py  file.py  terminal.py
tests/: test_core.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
