[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-agent"
version = "0.1.0"
description = "Aether — The Universal AI Agent Framework. Works natively on Windows 11 and Linux."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aether Contributors"}
]
keywords = ["ai-agent", "llm", "cli", "mcp", "a2a", "agent-framework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.50",
    "structlog>=24.0",
    "platformdirs>=4.0",
    "httpx>=0.27",
    "croniter>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docker = [
    "docker>=7.0",
]
all = [
    "aether-agent[dev,docker]",
]

[project.scripts]
aether = "aether.cli.main:main"

[project.urls]
Homepage = "https://github.com/aether-agent/aether"
Repository = "https://github.com/aether-agent/aether.git"

[tool.hatch.build.targets.wheel]
packages = ["src/aether"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
